[package]
name = "block-ts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
web3 = "0.18.0"
tokio = {version = "1.21.2", features = ["full"]}
mongodb = "2.3.1"
serde = {version = "1.0.145", features = ["derive"]}